--- a/overfitcheck.ipynb
+++ b/overfitcheck.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMtcGX6Xak4U+K7Yi0EFmql",
+      "authorship_tag": "ABX9TyPfhA/MU67+rqL0W4khwFoR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,12 +44,12 @@
         "print(df.head())"
       ],
       "metadata": {
-        "id": "n0l9bqH-_vs9",
-        "outputId": "b6c7ee18-8973-423c-d895-fc1a785c2f49",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 663
-        }
+        },
+        "id": "n0l9bqH-_vs9",
+        "outputId": "b6c7ee18-8973-423c-d895-fc1a785c2f49"
       },
       "execution_count": 10,
       "outputs": [
@@ -414,7 +414,7 @@
         "model.eval()\n",
         "with torch.no_grad():\n",
         "    test_outputs = model(X_test_tensor)\n",
-        "    test_loss = criterion(test_outputs, y_test_tensor)\n",
+        "    test_loss = criterion(test_outputs, y_test_tensor) # to see in inverse also\n",
         "    print(f'Test Loss: {test_loss.item():.4f}')\n",
         "\n",
         "#my overfit!!!\n",
