--- a/NN_shared.ipynb
+++ b/NN_shared.ipynb
@@ -183,8 +183,7 @@
         "    model, scalers = train_model(csv_file, input_columns, target_columns,100,1000,model_name=model_name)#כאן צריך אולי לרשום את הערכים של הפרמטרים אותם אנחנו רוצים להכניס לרשת\n",
         "    os.chdir(r'C:\\Users\\matan\\OneDrive\\Desktop\\Matan\\project A\\ProjectA_col\\NN')#change acrodinly\n",
         "    torch.save(model.state_dict(), model_name)\n",
-        "    print(\"Script executed in:\", os.getcwd())\n",
-        ""
+        "    print(\"Script executed in:\", os.getcwd())\n"
       ]
     }
   ]
