--- a/NN_shared.ipynb
+++ b/NN_shared.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOAEFnseymFN3wd+Kb5yNYt",
+      "authorship_tag": "ABX9TyPSZscpuvyWv+oAnHibtzCh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       },
       "outputs": [],
       "source": [
-        "import torch\n",
+        "import torc\n",
         "import torch.nn as nn\n",
         "from torch.utils.data import Dataset, DataLoader, random_split\n",
         "from torch.utils.tensorboard import SummaryWriter\n",
