--- a/NN_shared.ipynb
+++ b/NN_shared.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPSZscpuvyWv+oAnHibtzCh",
+      "authorship_tag": "ABX9TyMpi0hwvzQVEdcc52xKqxEf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,11 +43,8 @@
         "import joblib\n",
         "import os\n",
         "\n",
-        "# Disable oneDNN optimizations\n",
-        "os.environ['TF_ENABLE_ONEDNN_OPTS'] = '0'\n",
-        "\n",
-        "# Import TensorFlow after setting the environment variable\n",
-        "import tensorflow as tf\n",
+        "#os.environ['TF_ENABLE_ONEDNN_OPTS'] = '0'\n",
+        "#import tensorflow as tf\n",
         "\n",
         "\n",
         "# Define the dataset class\n",
@@ -89,11 +86,9 @@
         "    def forward(self, x):\n",
         "        return self.model(x)\n",
         "\n",
-        "\n",
-        "\n",
         "# Training function with validation and TensorBoard logging\n",
-        "def train_model(csv_file, input_columns, target_columns, num_epochs=20,hidden_size=128, batch_size=64, learning_rate=0.001, validation_split=0.2,model_name=\"model.pth\"):\n",
-        "    # Device configuration\n",
+        "def train_model(csv_file, input_columns, target_columns, num_epochs=20,hidden_size=128, batch_size=64,\n",
+        "                learning_rate=0.001, validation_split=0.2,model_name=\"model.pth\"):\n",
         "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "\n",
         "    # Load dataset and create scalers\n",
@@ -174,16 +169,16 @@
         "\n",
         "# Main execution\n",
         "if __name__ == '__main__':\n",
-        "    csv_file = r'C:\\Users\\matan\\OneDrive\\Desktop\\Matan\\project A\\ProjectA_col\\dataGen\\overfit_test.csv'  ##כאן צריך להכניס את המיקום של תקיית הדתא איתה אתה מאמן\n",
-        "\n",
-        "    # Define input and target columns (D to K and L to T)\n",
-        "    input_columns = ['velocity', 'yaw_angle', 'yaw_rate', 'slip_angle', 'front_wheel', 'back_wheel', 'acceleration', 'angular_acceleration']  # D to K\n",
-        "    target_columns = ['delta_x_position', 'delta_y_position', 'delta_theta', 'delta_velocity', 'delta_yaw_angle', 'delta_yaw_rate', 'delta_slip_angle', 'delta_front_wheel', 'delta_back_wheel']  # L to T\n",
-        "    model_name = \"overfit2.pth\"## כאן להכניס את השם שרוצים לשמור של שאנחנו רוצים לרשת\n",
-        "    model, scalers = train_model(csv_file, input_columns, target_columns,100,1000,model_name=model_name)#כאן צריך אולי לרשום את הערכים של הפרמטרים אותם אנחנו רוצים להכניס לרשת\n",
-        "    os.chdir(r'C:\\Users\\matan\\OneDrive\\Desktop\\Matan\\project A\\ProjectA_col\\NN')#change acrodinly\n",
-        "    torch.save(model.state_dict(), model_name)\n",
-        "    print(\"Script executed in:\", os.getcwd())\n"
+        "    df = pd.read_csv('overfit_test.csv')\n",
+        "    input_columns = ['velocity', 'yaw_angle', 'yaw_rate', 'slip_angle', 'front_wheel',\n",
+        "                     'back_wheel', 'acceleration', 'angular_acceleration']  # D to K\n",
+        "    target_columns = ['delta_x_position', 'delta_y_position', 'delta_theta', 'delta_velocity', 'delta_yaw_angle',\n",
+        "                      'delta_yaw_rate', 'delta_slip_angle', 'delta_front_wheel', 'delta_back_wheel']  # L to T\n",
+        "    model_name = \"overfit2.pth\" # The name of the save\n",
+        "    model, scalers = train_model(df, input_columns, target_columns,100,1000,model_name=model_name)\n",
+        "    #os.chdir(r'C:\\Users\\matan\\OneDrive\\Desktop\\Matan\\project A\\ProjectA_col\\NN')#change acrodinly\n",
+        "    #torch.save(model.state_dict(), model_name)\n",
+        "    #print(\"Script executed in:\", os.getcwd())\n"
       ]
     }
   ]
