--- a/NN_shared.ipynb
+++ b/NN_shared.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMpi0hwvzQVEdcc52xKqxEf",
+      "authorship_tag": "ABX9TyPiEvYLuiDvBZa8cfYLLhVV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,42 +34,17 @@
       },
       "outputs": [],
       "source": [
-        "import torc\n",
+        "import pandas as pd\n",
+        "import torch\n",
         "import torch.nn as nn\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.model_selection import train_test_split\n",
         "from torch.utils.data import Dataset, DataLoader, random_split\n",
         "from torch.utils.tensorboard import SummaryWriter\n",
-        "import pandas as pd\n",
-        "from sklearn.preprocessing import StandardScaler\n",
         "import joblib\n",
         "import os\n",
         "\n",
         "#os.environ['TF_ENABLE_ONEDNN_OPTS'] = '0'\n",
-        "#import tensorflow as tf\n",
-        "\n",
-        "\n",
-        "# Define the dataset class\n",
-        "class TrajectoryDataset(Dataset):\n",
-        "    def __init__(self, csv_file, input_columns, target_columns, scaler=None):\n",
-        "        data = pd.read_csv(csv_file)\n",
-        "\n",
-        "        self.inputs = data[input_columns].values.astype('float32')  # Select input columns\n",
-        "        self.targets = data[target_columns].values.astype('float32')  # Select target columns\n",
-        "\n",
-        "        # Normalize the data\n",
-        "        if scaler is None:\n",
-        "            self.input_scaler = StandardScaler().fit(self.inputs)\n",
-        "            self.target_scaler = StandardScaler().fit(self.targets)\n",
-        "        else:\n",
-        "            self.input_scaler, self.target_scaler = scaler\n",
-        "\n",
-        "        self.inputs = self.input_scaler.transform(self.inputs)\n",
-        "        self.targets = self.target_scaler.transform(self.targets)\n",
-        "\n",
-        "    def __len__(self):\n",
-        "        return len(self.inputs)\n",
-        "\n",
-        "    def __getitem__(self, idx):\n",
-        "        return self.inputs[idx], self.targets[idx]\n",
         "\n",
         "# Define the MLP model\n",
         "class MLP(nn.Module):\n",
@@ -87,12 +62,16 @@
         "        return self.model(x)\n",
         "\n",
         "# Training function with validation and TensorBoard logging\n",
-        "def train_model(csv_file, input_columns, target_columns, num_epochs=20,hidden_size=128, batch_size=64,\n",
+        "def train_model(df, input_columns, target_columns, num_epochs=20,hidden_size=128, batch_size=64,\n",
         "                learning_rate=0.001, validation_split=0.2,model_name=\"model.pth\"):\n",
         "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "\n",
-        "    # Load dataset and create scalers\n",
-        "    full_dataset = TrajectoryDataset(csv_file, input_columns, target_columns)\n",
+        "    input_data = df[input_columns].values\n",
+        "    output_data = df[output_columns].values\n",
+        "    input_data_scaled = StandardScaler().fit_transform(input_data)\n",
+        "    output_data_scaled = StandardScaler().fit_transform(output_data)\n",
+        "    ###\n",
+        "    #full_dataset = TrajectoryDataset(df, input_columns, target_columns)\n",
         "    dataset_size = len(full_dataset)\n",
         "    val_size = int(validation_split * dataset_size)\n",
         "    train_size = dataset_size - val_size\n",
@@ -103,6 +82,9 @@
         "        [train_size, val_size],\n",
         "        generator=torch.Generator().manual_seed(42)\n",
         "    )\n",
+        "    ####\n",
+        "    # Split the data into train and validation sets\n",
+        "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
         "\n",
         "    # Data loaders\n",
         "    train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, num_workers=2)\n",
