--- a/NN_shared.ipynb
+++ b/NN_shared.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPiEvYLuiDvBZa8cfYLLhVV",
+      "authorship_tag": "ABX9TyP1aFpH/oPWPbO4AelmEZEK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,6 +70,13 @@
         "    output_data = df[output_columns].values\n",
         "    input_data_scaled = StandardScaler().fit_transform(input_data)\n",
         "    output_data_scaled = StandardScaler().fit_transform(output_data)\n",
+        "\n",
+        "    X_train, X_test, y_train, y_test = train_test_split(input_data_scaled, output_data_scaled, test_size=0.2, random_state=42)\n",
+        "\n",
+        "    # Data loaders\n",
+        "    train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, num_workers=2)\n",
+        "    val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False, num_workers=2)\n",
+        "\n",
         "    ###\n",
         "    #full_dataset = TrajectoryDataset(df, input_columns, target_columns)\n",
         "    dataset_size = len(full_dataset)\n",
@@ -84,11 +91,7 @@
         "    )\n",
         "    ####\n",
         "    # Split the data into train and validation sets\n",
-        "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
         "\n",
-        "    # Data loaders\n",
-        "    train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, num_workers=2)\n",
-        "    val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False, num_workers=2)\n",
         "\n",
         "    # Initialize model, loss function, and optimizer\n",
         "    #model = SLP(input_size=len(input_columns), output_size=len(target_columns),layer_width=1000).to(device)\n",
