--- a/NN_shared.ipynb
+++ b/NN_shared.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP1aFpH/oPWPbO4AelmEZEK",
+      "authorship_tag": "ABX9TyMLagP8vRluth8MaQ3hfXuI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,12 +57,11 @@
         "            nn.ReLU(),\n",
         "            nn.Linear(hidden_size, output_size)\n",
         "        )\n",
-        "\n",
         "    def forward(self, x):\n",
         "        return self.model(x)\n",
         "\n",
         "# Training function with validation and TensorBoard logging\n",
-        "def train_model(df, input_columns, target_columns, num_epochs=20,hidden_size=128, batch_size=64,\n",
+        "def train_model(df, input_columns, output_columns, num_epochs=20,hidden_size=128, batch_size=64,\n",
         "                learning_rate=0.001, validation_split=0.2,model_name=\"model.pth\"):\n",
         "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "\n",
@@ -90,7 +89,7 @@
         "        generator=torch.Generator().manual_seed(42)\n",
         "    )\n",
         "    ####\n",
-        "    # Split the data into train and validation sets\n",
+        "\n",
         "\n",
         "\n",
         "    # Initialize model, loss function, and optimizer\n",
@@ -157,10 +156,10 @@
         "    df = pd.read_csv('overfit_test.csv')\n",
         "    input_columns = ['velocity', 'yaw_angle', 'yaw_rate', 'slip_angle', 'front_wheel',\n",
         "                     'back_wheel', 'acceleration', 'angular_acceleration']  # D to K\n",
-        "    target_columns = ['delta_x_position', 'delta_y_position', 'delta_theta', 'delta_velocity', 'delta_yaw_angle',\n",
+        "    output_columns = ['delta_x_position', 'delta_y_position', 'delta_theta', 'delta_velocity', 'delta_yaw_angle',\n",
         "                      'delta_yaw_rate', 'delta_slip_angle', 'delta_front_wheel', 'delta_back_wheel']  # L to T\n",
         "    model_name = \"overfit2.pth\" # The name of the save\n",
-        "    model, scalers = train_model(df, input_columns, target_columns,100,1000,model_name=model_name)\n",
+        "    model, scalers = train_model(df, input_columns, output_columns,100,1000,model_name=model_name)\n",
         "    #os.chdir(r'C:\\Users\\matan\\OneDrive\\Desktop\\Matan\\project A\\ProjectA_col\\NN')#change acrodinly\n",
         "    #torch.save(model.state_dict(), model_name)\n",
         "    #print(\"Script executed in:\", os.getcwd())\n"
