--- a/NN_shared.ipynb
+++ b/NN_shared.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLagP8vRluth8MaQ3hfXuI",
+      "authorship_tag": "ABX9TyMD9hY5UZvOtOh3Qwu6LMvE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -153,13 +153,14 @@
         "\n",
         "# Main execution\n",
         "if __name__ == '__main__':\n",
-        "    df = pd.read_csv('overfit_test.csv')\n",
+        "    df = pd.read_csv('overfit_test.csv') # Load the csv to \"files\" in the left up corner of google colab\n",
         "    input_columns = ['velocity', 'yaw_angle', 'yaw_rate', 'slip_angle', 'front_wheel',\n",
         "                     'back_wheel', 'acceleration', 'angular_acceleration']  # D to K\n",
         "    output_columns = ['delta_x_position', 'delta_y_position', 'delta_theta', 'delta_velocity', 'delta_yaw_angle',\n",
         "                      'delta_yaw_rate', 'delta_slip_angle', 'delta_front_wheel', 'delta_back_wheel']  # L to T\n",
         "    model_name = \"overfit2.pth\" # The name of the save\n",
         "    model, scalers = train_model(df, input_columns, output_columns,100,1000,model_name=model_name)\n",
+        "\n",
         "    #os.chdir(r'C:\\Users\\matan\\OneDrive\\Desktop\\Matan\\project A\\ProjectA_col\\NN')#change acrodinly\n",
         "    #torch.save(model.state_dict(), model_name)\n",
         "    #print(\"Script executed in:\", os.getcwd())\n"
