--- a/NN_shared.ipynb
+++ b/NN_shared.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMD9hY5UZvOtOh3Qwu6LMvE",
+      "authorship_tag": "ABX9TyPr+PgcJMhucrhgMifLXGIE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
         "import torch.nn as nn\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from torch.utils.data import Dataset, DataLoader, random_split\n",
+        "from torch.utils.data import TensorDataset, DataLoader, random_split\n",
         "from torch.utils.tensorboard import SummaryWriter\n",
         "import joblib\n",
         "import os\n",
@@ -48,21 +48,20 @@
         "\n",
         "# Define the MLP model\n",
         "class MLP(nn.Module):\n",
-        "    def __init__(self, input_size, hidden_size, output_size):\n",
+        "    def __init__(self, input_size, output_size):\n",
         "        super(MLP, self).__init__()\n",
         "        self.model = nn.Sequential(\n",
-        "            nn.Linear(input_size, hidden_size),\n",
+        "            nn.Linear(input_size, 128),\n",
         "            nn.ReLU(),\n",
-        "            nn.Linear(hidden_size, hidden_size),\n",
+        "            nn.Linear(128, 128),\n",
         "            nn.ReLU(),\n",
-        "            nn.Linear(hidden_size, output_size)\n",
+        "            nn.Linear(128, output_size)\n",
         "        )\n",
         "    def forward(self, x):\n",
         "        return self.model(x)\n",
         "\n",
         "# Training function with validation and TensorBoard logging\n",
-        "def train_model(df, input_columns, output_columns, num_epochs=20,hidden_size=128, batch_size=64,\n",
-        "                learning_rate=0.001, validation_split=0.2,model_name=\"model.pth\"):\n",
+        "def train_model(df, input_columns, output_columns, num_epochs=20, batch_size=64, learning_rate=0.001,model_name):\n",
         "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "\n",
         "    input_data = df[input_columns].values\n",
@@ -70,40 +69,32 @@
         "    input_data_scaled = StandardScaler().fit_transform(input_data)\n",
         "    output_data_scaled = StandardScaler().fit_transform(output_data)\n",
         "\n",
+        "    # Split the data into train and validation sets\n",
         "    X_train, X_test, y_train, y_test = train_test_split(input_data_scaled, output_data_scaled, test_size=0.2, random_state=42)\n",
+        "\n",
+        "    # Convert data to PyTorch tensors\n",
+        "    X_train_tensor = torch.tensor(X_train, dtype=torch.float32)\n",
+        "    y_train_tensor = torch.tensor(y_train, dtype=torch.float32)\n",
+        "    X_test_tensor = torch.tensor(X_test, dtype=torch.float32)\n",
+        "    y_test_tensor = torch.tensor(y_test, dtype=torch.float32)\n",
+        "\n",
+        "    # Create datasets and dataloaders\n",
+        "    train_dataset = TensorDataset(X_train_tensor, y_train_tensor)\n",
+        "    val_dataset = TensorDataset(X_test_tensor, y_test_tensor)\n",
         "\n",
         "    # Data loaders\n",
         "    train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, num_workers=2)\n",
         "    val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False, num_workers=2)\n",
         "\n",
-        "    ###\n",
-        "    #full_dataset = TrajectoryDataset(df, input_columns, target_columns)\n",
-        "    dataset_size = len(full_dataset)\n",
-        "    val_size = int(validation_split * dataset_size)\n",
-        "    train_size = dataset_size - val_size\n",
-        "\n",
-        "    # Split dataset into training and validation sets\n",
-        "    train_dataset, val_dataset = random_split(\n",
-        "        full_dataset,\n",
-        "        [train_size, val_size],\n",
-        "        generator=torch.Generator().manual_seed(42)\n",
-        "    )\n",
-        "    ####\n",
-        "\n",
-        "\n",
         "\n",
         "    # Initialize model, loss function, and optimizer\n",
-        "    #model = SLP(input_size=len(input_columns), output_size=len(target_columns),layer_width=1000).to(device)\n",
-        "    model = MLP(input_size=len(input_columns),hidden_size=hidden_size, output_size=len(target_columns)).to(device)\n",
-        "\n",
+        "    model = MLP(input_size=len(input_columns), output_size=len(output_columns)).to(device)\n",
         "    criterion = nn.MSELoss()\n",
         "    optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
         "\n",
         "\n",
-        "\n",
         "    # TensorBoard writer\n",
-        "    writer = SummaryWriter()\n",
-        "\n",
+        "    #writer = SummaryWriter()\n",
         "\n",
         "    # Training loop\n",
         "    for epoch in range(num_epochs):\n",
@@ -158,8 +149,8 @@
         "                     'back_wheel', 'acceleration', 'angular_acceleration']  # D to K\n",
         "    output_columns = ['delta_x_position', 'delta_y_position', 'delta_theta', 'delta_velocity', 'delta_yaw_angle',\n",
         "                      'delta_yaw_rate', 'delta_slip_angle', 'delta_front_wheel', 'delta_back_wheel']  # L to T\n",
-        "    model_name = \"overfit2.pth\" # The name of the save\n",
-        "    model, scalers = train_model(df, input_columns, output_columns,100,1000,model_name=model_name)\n",
+        "    model, scalers = train_model(df, input_columns, output_columns,\n",
+        "                                 num_epochs=20, batch_size=64, learning_rate=0.001, model_name=\"TheBestNNInTheWest.pth\") # Don't forget change the hidden layers!\n",
         "\n",
         "    #os.chdir(r'C:\\Users\\matan\\OneDrive\\Desktop\\Matan\\project A\\ProjectA_col\\NN')#change acrodinly\n",
         "    #torch.save(model.state_dict(), model_name)\n",
