before delete the return in the function train_model

--- a/NN_shared.ipynb
+++ b/NN_shared.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPr+PgcJMhucrhgMifLXGIE",
+      "authorship_tag": "ABX9TyPcmkZG2dRmQBeI9tSwkgtd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,16 +61,16 @@
         "        return self.model(x)\n",
         "\n",
         "# Training function with validation and TensorBoard logging\n",
-        "def train_model(df, input_columns, output_columns, num_epochs=20, batch_size=64, learning_rate=0.001,model_name):\n",
+        "def train_model(df, input_columns, target_columns, num_epochs=20, batch_size=64, learning_rate=0.001,model_name):\n",
         "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "\n",
         "    input_data = df[input_columns].values\n",
-        "    output_data = df[output_columns].values\n",
+        "    target_data = df[target_columns].values\n",
         "    input_data_scaled = StandardScaler().fit_transform(input_data)\n",
-        "    output_data_scaled = StandardScaler().fit_transform(output_data)\n",
+        "    target_data_scaled = StandardScaler().fit_transform(target_data)\n",
         "\n",
         "    # Split the data into train and validation sets\n",
-        "    X_train, X_test, y_train, y_test = train_test_split(input_data_scaled, output_data_scaled, test_size=0.2, random_state=42)\n",
+        "    X_train, X_test, y_train, y_test = train_test_split(input_data_scaled, target_data_scaled, test_size=0.2, random_state=42)\n",
         "\n",
         "    # Convert data to PyTorch tensors\n",
         "    X_train_tensor = torch.tensor(X_train, dtype=torch.float32)\n",
@@ -88,7 +88,7 @@
         "\n",
         "\n",
         "    # Initialize model, loss function, and optimizer\n",
-        "    model = MLP(input_size=len(input_columns), output_size=len(output_columns)).to(device)\n",
+        "    model = MLP(input_size=len(input_columns), output_size=len(target_columns)).to(device)\n",
         "    criterion = nn.MSELoss()\n",
         "    optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
         "\n",
@@ -98,48 +98,51 @@
         "\n",
         "    # Training loop\n",
         "    for epoch in range(num_epochs):\n",
-        "        model.train()\n",
+        "        model.train() # set the model to training mode\n",
         "        train_loss = 0.0\n",
         "\n",
         "        for inputs, targets in train_loader:\n",
-        "            inputs = inputs.to(device)\n",
-        "            targets = targets.to(device)\n",
+        "            inputs, targets = inputs.to(device), targets.to(device)\n",
         "\n",
         "            # Forward pass\n",
-        "            outputs = model(inputs)\n",
-        "            loss = criterion(outputs, targets)\n",
+        "            predictions = model(inputs)\n",
+        "            loss = criterion(predictions, targets)\n",
         "\n",
         "            # Backward and optimize\n",
         "            optimizer.zero_grad()\n",
         "            loss.backward()\n",
         "            optimizer.step()\n",
         "\n",
-        "            train_loss += loss.item() * inputs.size(0)\n",
+        "            train_loss += loss.item()\n",
         "\n",
         "        # Validation loop\n",
         "        model.eval()\n",
         "        val_loss = 0.0\n",
-        "\n",
         "        with torch.no_grad():\n",
         "            for inputs, targets in val_loader:\n",
-        "                inputs = inputs.to(device)\n",
-        "                targets = targets.to(device)\n",
-        "\n",
-        "                outputs = model(inputs)\n",
-        "                loss = criterion(outputs, targets)\n",
-        "                val_loss += loss.item() * inputs.size(0)\n",
+        "                inputs, targets = inputs.to(device), targets.to(device)\n",
+        "                predictions = model(inputs)\n",
+        "                loss = criterion(predictions, targets)\n",
+        "                val_loss += loss.item()\n",
         "\n",
         "        # Calculate average losses\n",
-        "        train_loss /= train_size\n",
-        "        val_loss /= val_size\n",
+        "        train_loss /= len(train_loader)\n",
+        "        val_loss /= len(val_loader)\n",
         "\n",
         "        # Log to TensorBoard\n",
-        "        writer.add_scalars('Loss', {'Train': train_loss, 'Validation': val_loss}, epoch)\n",
-        "\n",
+        "        # writer.add_scalars('Loss', {'Train': train_loss, 'Validation': val_loss}, epoch)\n",
         "\n",
         "        print(f'Epoch [{epoch+1}/{num_epochs}], Train Loss: {train_loss:.4f}, Validation Loss: {val_loss:.4f}')\n",
         "\n",
-        "    writer.close()\n",
+        "        # Save the model\n",
+        "        torch.save(model.state_dict(), f\"{model_name}.pth\")\n",
+        "        print(f\"Model saved as {model_name}.pth\")\n",
+        "\n",
+        "        # Save the model to Google Drive\n",
+        "        torch.save(model.state_dict(), '/content/drive/My Drive/{model_name}.pth')\n",
+        "        print(f\"Model saved to Google Drive as {model_name}.pth\")\n",
+        "\n",
+        "    #writer.close()\n",
         "    return model, (full_dataset.input_scaler, full_dataset.target_scaler)\n",
         "\n",
         "# Main execution\n",
@@ -147,9 +150,9 @@
         "    df = pd.read_csv('overfit_test.csv') # Load the csv to \"files\" in the left up corner of google colab\n",
         "    input_columns = ['velocity', 'yaw_angle', 'yaw_rate', 'slip_angle', 'front_wheel',\n",
         "                     'back_wheel', 'acceleration', 'angular_acceleration']  # D to K\n",
-        "    output_columns = ['delta_x_position', 'delta_y_position', 'delta_theta', 'delta_velocity', 'delta_yaw_angle',\n",
+        "    target_columns = ['delta_x_position', 'delta_y_position', 'delta_theta', 'delta_velocity', 'delta_yaw_angle',\n",
         "                      'delta_yaw_rate', 'delta_slip_angle', 'delta_front_wheel', 'delta_back_wheel']  # L to T\n",
-        "    model, scalers = train_model(df, input_columns, output_columns,\n",
+        "    model, scalers = train_model(df, input_columns, target_columns,\n",
         "                                 num_epochs=20, batch_size=64, learning_rate=0.001, model_name=\"TheBestNNInTheWest.pth\") # Don't forget change the hidden layers!\n",
         "\n",
         "    #os.chdir(r'C:\\Users\\matan\\OneDrive\\Desktop\\Matan\\project A\\ProjectA_col\\NN')#change acrodinly\n",
