--- a/NN_shared.ipynb
+++ b/NN_shared.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPcmkZG2dRmQBeI9tSwkgtd",
+      "authorship_tag": "ABX9TyOaL3Bm44Lzhy3vIAGDa/43",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,11 +28,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "XCsDPej27oQX"
+        "id": "XCsDPej27oQX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4021d101-f988-4a2e-e8d0-33f1100dd7af"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch [1/10], Train Loss: 1.1347, Validation Loss: 0.6401\n",
+            "Epoch [2/10], Train Loss: 1.0893, Validation Loss: 0.6487\n",
+            "Epoch [3/10], Train Loss: 1.0471, Validation Loss: 0.6583\n",
+            "Epoch [4/10], Train Loss: 1.0070, Validation Loss: 0.6692\n",
+            "Epoch [5/10], Train Loss: 0.9699, Validation Loss: 0.6812\n",
+            "Epoch [6/10], Train Loss: 0.9342, Validation Loss: 0.6952\n",
+            "Epoch [7/10], Train Loss: 0.8993, Validation Loss: 0.7101\n",
+            "Epoch [8/10], Train Loss: 0.8652, Validation Loss: 0.7251\n",
+            "Epoch [9/10], Train Loss: 0.8326, Validation Loss: 0.7407\n",
+            "Epoch [10/10], Train Loss: 0.8000, Validation Loss: 0.7573\n"
+          ]
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "import torch\n",
@@ -61,7 +82,7 @@
         "        return self.model(x)\n",
         "\n",
         "# Training function with validation and TensorBoard logging\n",
-        "def train_model(df, input_columns, target_columns, num_epochs=20, batch_size=64, learning_rate=0.001,model_name):\n",
+        "def train_model(df, input_columns, target_columns, model_name, num_epochs=20, batch_size=64, learning_rate=0.001,):\n",
         "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "\n",
         "    input_data = df[input_columns].values\n",
@@ -134,16 +155,12 @@
         "\n",
         "        print(f'Epoch [{epoch+1}/{num_epochs}], Train Loss: {train_loss:.4f}, Validation Loss: {val_loss:.4f}')\n",
         "\n",
-        "        # Save the model\n",
-        "        torch.save(model.state_dict(), f\"{model_name}.pth\")\n",
-        "        print(f\"Model saved as {model_name}.pth\")\n",
         "\n",
-        "        # Save the model to Google Drive\n",
-        "        torch.save(model.state_dict(), '/content/drive/My Drive/{model_name}.pth')\n",
-        "        print(f\"Model saved to Google Drive as {model_name}.pth\")\n",
+        "    # Save the model to Google Drive\n",
+        "    #torch.save(model.state_dict(), '/content/drive/My Drive/{model_name}.pth')\n",
+        "    #print(f\"Model saved to Google Drive as {model_name}.pth\")\n",
         "\n",
         "    #writer.close()\n",
-        "    return model, (full_dataset.input_scaler, full_dataset.target_scaler)\n",
         "\n",
         "# Main execution\n",
         "if __name__ == '__main__':\n",
@@ -152,8 +169,7 @@
         "                     'back_wheel', 'acceleration', 'angular_acceleration']  # D to K\n",
         "    target_columns = ['delta_x_position', 'delta_y_position', 'delta_theta', 'delta_velocity', 'delta_yaw_angle',\n",
         "                      'delta_yaw_rate', 'delta_slip_angle', 'delta_front_wheel', 'delta_back_wheel']  # L to T\n",
-        "    model, scalers = train_model(df, input_columns, target_columns,\n",
-        "                                 num_epochs=20, batch_size=64, learning_rate=0.001, model_name=\"TheBestNNInTheWest.pth\") # Don't forget change the hidden layers!\n",
+        "    train_model(df, input_columns, target_columns, model_name=\"check.pth\", num_epochs=10, batch_size=128, learning_rate=0.001) # Don't forget change the hidden layers!\n",
         "\n",
         "    #os.chdir(r'C:\\Users\\matan\\OneDrive\\Desktop\\Matan\\project A\\ProjectA_col\\NN')#change acrodinly\n",
         "    #torch.save(model.state_dict(), model_name)\n",
