--- a/NN_shared.ipynb
+++ b/NN_shared.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPqRtSofABYRAtDyj3KGpl9",
+      "authorship_tag": "ABX9TyN4eVn36OWGJyjqpZ3m8vuB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,29 +28,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 19,
       "metadata": {
         "id": "XCsDPej27oQX",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4021d101-f988-4a2e-e8d0-33f1100dd7af"
+        "outputId": "5921c6f3-09b7-412f-dbaf-6b82165fcc8c"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch [1/10], Train Loss: 1.1347, Validation Loss: 0.6401\n",
-            "Epoch [2/10], Train Loss: 1.0893, Validation Loss: 0.6487\n",
-            "Epoch [3/10], Train Loss: 1.0471, Validation Loss: 0.6583\n",
-            "Epoch [4/10], Train Loss: 1.0070, Validation Loss: 0.6692\n",
-            "Epoch [5/10], Train Loss: 0.9699, Validation Loss: 0.6812\n",
-            "Epoch [6/10], Train Loss: 0.9342, Validation Loss: 0.6952\n",
-            "Epoch [7/10], Train Loss: 0.8993, Validation Loss: 0.7101\n",
-            "Epoch [8/10], Train Loss: 0.8652, Validation Loss: 0.7251\n",
-            "Epoch [9/10], Train Loss: 0.8326, Validation Loss: 0.7407\n",
-            "Epoch [10/10], Train Loss: 0.8000, Validation Loss: 0.7573\n"
+            "Epoch [1/5], Train Loss: 1.0862, Validation Loss: 0.6315\n",
+            "Epoch [2/5], Train Loss: 1.0343, Validation Loss: 0.6396\n",
+            "Epoch [3/5], Train Loss: 0.9862, Validation Loss: 0.6479\n",
+            "Epoch [4/5], Train Loss: 0.9411, Validation Loss: 0.6571\n",
+            "Epoch [5/5], Train Loss: 0.8972, Validation Loss: 0.6671\n",
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "Model saved to Google Drive as check2.pth\n"
           ]
         }
       ],
@@ -60,12 +57,10 @@
         "import torch.nn as nn\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from torch.utils.data import TensorDataset, DataLoader, random_split\n",
+        "from torch.utils.data import TensorDataset, DataLoader\n",
         "from torch.utils.tensorboard import SummaryWriter\n",
-        "import joblib\n",
-        "import os\n",
+        "from google.colab import drive  # Import for Google Drive mounting\n",
         "\n",
-        "#os.environ['TF_ENABLE_ONEDNN_OPTS'] = '0'\n",
         "\n",
         "# Define the MLP model\n",
         "class MLP(nn.Module):\n",
@@ -101,20 +96,13 @@
         "    # Create datasets and dataloaders\n",
         "    train_dataset = TensorDataset(X_train_tensor, y_train_tensor)\n",
         "    val_dataset = TensorDataset(X_test_tensor, y_test_tensor)\n",
-        "\n",
-        "    # Data loaders\n",
         "    train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, num_workers=2)\n",
         "    val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False, num_workers=2)\n",
-        "\n",
         "\n",
         "    # Initialize model, loss function, and optimizer\n",
         "    model = MLP(input_size=len(input_columns), output_size=len(target_columns)).to(device)\n",
         "    criterion = nn.MSELoss()\n",
         "    optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
-        "\n",
-        "\n",
-        "    # TensorBoard writer\n",
-        "    #writer = SummaryWriter()\n",
         "\n",
         "    # Training loop\n",
         "    for epoch in range(num_epochs):\n",
@@ -149,9 +137,6 @@
         "        train_loss /= len(train_loader)\n",
         "        val_loss /= len(val_loader)\n",
         "\n",
-        "        # Log to TensorBoard\n",
-        "        # writer.add_scalars('Loss', {'Train': train_loss, 'Validation': val_loss}, epoch)\n",
-        "\n",
         "        print(f'Epoch [{epoch+1}/{num_epochs}], Train Loss: {train_loss:.4f}, Validation Loss: {val_loss:.4f}')\n",
         "\n",
         "\n",
@@ -159,20 +144,20 @@
         "    #torch.save(model.state_dict(), '/content/drive/My Drive/{model_name}.pth')\n",
         "    #print(f\"Model saved to Google Drive as {model_name}.pth\")\n",
         "\n",
-        "    #writer.close()\n",
+        "    # Save the model to Google Drive\n",
+        "    drive.mount('/content/drive')  # Mount Google Drive\n",
+        "    model_path = f'/content/drive/My Drive/NN_Models_Shared/{model_name}'\n",
+        "    torch.save(model.state_dict(), model_path)\n",
+        "    print(f\"Model saved to Google Drive as {model_name}\")\n",
         "\n",
-        "# Main execution\n",
+        "\n",
         "if __name__ == '__main__':\n",
         "    df = pd.read_csv('overfit_test.csv') # Load the csv to \"files\" in the left up corner of google colab\n",
         "    input_columns = ['velocity', 'yaw_angle', 'yaw_rate', 'slip_angle', 'front_wheel',\n",
         "                     'back_wheel', 'acceleration', 'angular_acceleration']  # D to K\n",
         "    target_columns = ['delta_x_position', 'delta_y_position', 'delta_theta', 'delta_velocity', 'delta_yaw_angle',\n",
         "                      'delta_yaw_rate', 'delta_slip_angle', 'delta_front_wheel', 'delta_back_wheel']  # L to T\n",
-        "    train_model(df, input_columns, target_columns, model_name=\"check.pth\", num_epochs=10, batch_size=128, learning_rate=0.001) # Don't forget change the hidden layers!\n",
-        "\n",
-        "    #os.chdir(r'C:\\Users\\matan\\OneDrive\\Desktop\\Matan\\project A\\ProjectA_col\\NN')#change acrodinly\n",
-        "    #torch.save(model.state_dict(), model_name)\n",
-        "    #print(\"Script executed in:\", os.getcwd())\n"
+        "    train_model(df, input_columns, target_columns, model_name=\"check2.pth\", num_epochs=5, batch_size=128, learning_rate=0.001) # Don't forget change the hidden layers!\n"
       ]
     }
   ]
