--- a/NN_shared.ipynb
+++ b/NN_shared.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5G7AhnPh8jw1bWTIiyyCH",
+      "authorship_tag": "ABX9TyP/JtpGtmaHyJjQNlEhW22S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,29 +28,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
-        "id": "XCsDPej27oQX",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "5921c6f3-09b7-412f-dbaf-6b82165fcc8c"
+        "id": "XCsDPej27oQX"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch [1/5], Train Loss: 1.0862, Validation Loss: 0.6315\n",
-            "Epoch [2/5], Train Loss: 1.0343, Validation Loss: 0.6396\n",
-            "Epoch [3/5], Train Loss: 0.9862, Validation Loss: 0.6479\n",
-            "Epoch [4/5], Train Loss: 0.9411, Validation Loss: 0.6571\n",
-            "Epoch [5/5], Train Loss: 0.8972, Validation Loss: 0.6671\n",
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
-            "Model saved to Google Drive as check2.pth\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import torch\n",
@@ -104,6 +86,8 @@
         "    criterion = nn.MSELoss()\n",
         "    optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
         "\n",
+        "    writer = SummaryWriter(log_dir=f'/content/drive/My Drive/NN_Models_Shared/fdsa') # TensorBoard setup\n",
+        "\n",
         "    # Training loop\n",
         "    for epoch in range(num_epochs):\n",
         "        model.train() # set the model to training mode\n",
@@ -139,10 +123,18 @@
         "\n",
         "        print(f'Epoch [{epoch+1}/{num_epochs}], Train Loss: {train_loss:.4f}, Validation Loss: {val_loss:.4f}')\n",
         "\n",
+        "        # Log losses to TensorBoard\n",
+        "        writer.add_scalar('Loss/Train', train_loss, epoch)\n",
+        "        writer.add_scalar('Loss/Validation', val_loss, epoch)\n",
         "\n",
-        "    # Save the model to Google Drive\n",
-        "    #torch.save(model.state_dict(), '/content/drive/My Drive/{model_name}.pth')\n",
-        "    #print(f\"Model saved to Google Drive as {model_name}.pth\")\n",
+        "        # Add model graph to TensorBoard (only for the first epoch)\n",
+        "        if epoch == 0:\n",
+        "            dummy_input = torch.randn(1, len(input_columns)).to(device)\n",
+        "            writer.add_graph(model, dummy_input)\n",
+        "\n",
+        "    writer.flush()  # Ensure all data is written to TensorBoard\n",
+        "    writer.close()\n",
+        "\n",
         "\n",
         "    # Save the model to Google Drive\n",
         "    model_path = f'/content/drive/My Drive/NN_Models_Shared/{model_name}'\n",
@@ -156,8 +148,21 @@
         "                     'back_wheel', 'acceleration', 'angular_acceleration']  # D to K\n",
         "    target_columns = ['delta_x_position', 'delta_y_position', 'delta_theta', 'delta_velocity', 'delta_yaw_angle',\n",
         "                      'delta_yaw_rate', 'delta_slip_angle', 'delta_front_wheel', 'delta_back_wheel']  # L to T\n",
-        "    train_model(df, input_columns, target_columns, model_name=\"check2.pth\", num_epochs=5, batch_size=128, learning_rate=0.001) # Don't forget change the hidden layers!\n"
+        "    train_model(df, input_columns, target_columns, model_name=\"check3.pth\", num_epochs=10, batch_size=128, learning_rate=0.001) # Don't forget change the hidden layers!\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dir = '/content/drive/My Drive/NN_Models_Shared/fdsa'\n",
+        "%load_ext tensorboard\n",
+        "%tensorboard --logdir=\"$dir\""
+      ],
+      "metadata": {
+        "id": "s8m289p-kLI2"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
