in the middle of making it generic

--- a/NN_shared.ipynb
+++ b/NN_shared.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP/JtpGtmaHyJjQNlEhW22S",
+      "authorship_tag": "ABX9TyO7OTxkfNoNDjhJkOeRAJVR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,11 +28,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 92,
       "metadata": {
-        "id": "XCsDPej27oQX"
+        "id": "XCsDPej27oQX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "afb54c7d-99a7-43ac-a4f8-99aaadc86ad6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "import torch\n",
@@ -43,7 +55,12 @@
         "from torch.utils.tensorboard import SummaryWriter\n",
         "from google.colab import drive  # Import for Google Drive mounting\n",
         "drive.mount('/content/drive')  # Mount Google Drive\n",
-        "\n",
+        "drive_dir = '/content/drive/My Drive/NN_Models_Shared/' # Our google Drive directory"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Define the MLP model\n",
         "class MLP(nn.Module):\n",
         "    def __init__(self, input_size, output_size):\n",
@@ -86,7 +103,7 @@
         "    criterion = nn.MSELoss()\n",
         "    optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
         "\n",
-        "    writer = SummaryWriter(log_dir=f'/content/drive/My Drive/NN_Models_Shared/fdsa') # TensorBoard setup\n",
+        "    writer = SummaryWriter(log_dir=dir+'fdf') # TensorBoard setup\n",
         "\n",
         "    # Training loop\n",
         "    for epoch in range(num_epochs):\n",
@@ -137,32 +154,63 @@
         "\n",
         "\n",
         "    # Save the model to Google Drive\n",
-        "    model_path = f'/content/drive/My Drive/NN_Models_Shared/{model_name}'\n",
+        "    model_path = drive_dir + model_name + '.pth'\n",
         "    torch.save(model.state_dict(), model_path)\n",
         "    print(f\"Model saved to Google Drive as {model_name}\")\n",
         "\n",
         "\n",
         "if __name__ == '__main__':\n",
         "    df = pd.read_csv('overfit_test.csv') # Load the csv to \"files\" in the left up corner of google colab\n",
-        "    input_columns = ['velocity', 'yaw_angle', 'yaw_rate', 'slip_angle', 'front_wheel',\n",
-        "                     'back_wheel', 'acceleration', 'angular_acceleration']  # D to K\n",
+        "    input_columns  = ['velocity', 'yaw_angle', 'yaw_rate', 'slip_angle', 'front_wheel',\n",
+        "                      'back_wheel', 'acceleration', 'angular_acceleration']  # D to K\n",
         "    target_columns = ['delta_x_position', 'delta_y_position', 'delta_theta', 'delta_velocity', 'delta_yaw_angle',\n",
         "                      'delta_yaw_rate', 'delta_slip_angle', 'delta_front_wheel', 'delta_back_wheel']  # L to T\n",
-        "    train_model(df, input_columns, target_columns, model_name=\"check3.pth\", num_epochs=10, batch_size=128, learning_rate=0.001) # Don't forget change the hidden layers!\n"
-      ]
+        "\n",
+        "    train_model(df, input_columns, target_columns, model_name=\"check3\", num_epochs=10, batch_size=128, learning_rate=0.001) # Don't forget change the hidden layers!\n",
+        "\n",
+        "    # Show the training process on TensorBoard\n",
+        "    %load_ext tensorboard\n",
+        "    %tensorboard --logdir=\"$drive_dir\""
+      ],
+      "metadata": {
+        "id": "XaYTYAnImnCH"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "dir = '/content/drive/My Drive/NN_Models_Shared/fdsa'\n",
-        "%load_ext tensorboard\n",
-        "%tensorboard --logdir=\"$dir\""
+        "model_name=\"check3\"\n",
+        "model_path = f'/content/drive/My Drive/NN_Models_Shared/{model_name}'\n",
+        "model_path\n",
+        "xxxx = dir + model_name\n",
+        "xxxx"
       ],
       "metadata": {
-        "id": "s8m289p-kLI2"
+        "id": "zlqt9B2EqcuB",
+        "outputId": "f9f5f85c-8698-4bd2-b6ae-cae7d589e470",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'/content/drive/My Drive/NN_Models_Shared/check3.pth'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 80
+        }
+      ]
     }
   ]
 }
